# Comsurve

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai_engine/: ai_engine_runner.py  causality_engine.py  confidence_calibrator.py  embedding_generator.py  evaluation_engine.py  feedback_controller.py  gemini_client.py  learning_store.py  llama_client.py  prediction_engine.py  qdrant_manager.py  signal_correlator.py
alembic/: env.py
api/: dependencies.py  main.py
dashboard/: api_client.py  app.py
ingestion/: base_ingestor.py
processor/: ais_anomaly_detector.py  ais_feature_extractor.py  anomaly_detector.py  feature_extractor.py  monitoring_window.py  processor_runner.py  rail_anomaly_detector.py  rail_feature_extractor.py  satellite_anomaly_detector.py  satellite_feature_extractor.py
scheduler/: alerting.py  cleanup.py  job_history.py  jobs.py  scheduler_runner.py
scripts/: backfill_yfinance_history.py  backtest_engine.py  backup_qdrant.py  entrypoint.sh  inspect_anomalies.py  run_pipeline_once.py  seed_evaluation_data.py  staging_check.py
shared/: commodity_registry.py  config.py  db.py  geo_utils.py  logger.py  models.py  schemas.py
tests/: conftest.py  test_ai_engine.py  test_aircraft_rail_ingestors.py  test_ais_anomaly_detector.py  test_anomaly_detector.py  test_api_endpoints.py  test_api_routers.py  test_backtest_engine.py  test_causality_prediction.py  test_confidence_calibrator.py  test_e2e_smoke.py  test_embedding_serialization.py  test_feedback_controller.py  test_ingestors.py  (+4 more)
(+37 files in other folders)
