[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mcei"
version = "0.1.0"
description = "Multimodal Commodity Event Intelligence Engine"
requires-python = ">=3.11"
dependencies = [
    # Web / API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # Scheduling
    "apscheduler>=3.10",

    # NLP / Sentiment
    "vaderSentiment>=3.3",

    # AI / Embeddings
    "google-genai>=1.0",
    "qdrant-client>=1.9",

    # Data / Finance
    "yfinance>=0.2",
    "pandas>=2.2",
    "numpy>=1.26",

    # Satellite
    "sentinelsat>=1.3",

    # Dashboard
    "streamlit>=1.35",
    "plotly>=5.21",

    # Settings validation
    "pydantic-settings>=2.2",

    # Logging
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
